// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadCell should render 1`] = `
<th
  className="cf-table__cell cf-table__cell--head"
>
  TableHeadCell
</th>
`;

exports[`TableHeadCell should render extra class name 1`] = `
<th
  className="cf-table__cell cf-table__cell--head extra"
>
  TableHeadCell
</th>
`;
